# TeamAI

./: .bandit.yml  .dockerignore  .env.azure.example  .env.example  .pre-commit-config.yaml  .secrets.baseline  ENTERPRISE_SETUP_COMPLETE.md  Makefile  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  UI_TEST_RESULTS.md  add_invite.py  docker-compose.yml  test_oauth_direct.html  test_ui.html  test_ui.sh
.devcontainer/: devcontainer.json
WoWYashus/: README.md
backend/: TEST_RESULTS.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_architecture.py  test_recipe.py
backend/agents/: __init__.py  agent.py  cookbook_loader.py  recipe_evaluator.py  recipe_schema.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  agents.py  auth.py  invites.py  tasks.py
backend/app/api/v1/: operations.py
backend/app/models/: __init__.py  agency.py  agent.py  audit.py  invite.py  schemas.py  subscription.py
backend/app/services/: auth_service.py  authorization_service.py  task_service.py
backend/app/utils/: db.py  oauth.py  rls.py  secrets.py  security.py
backend/components/: __init__.py  base.py  subscription_tracker.py
backend/components/connectors/: __init__.py  website_connector.py
backend/components/processors/: __init__.py  llm_processor.py  report_generator.py  web_crawler.py
backend/components/utils/: __init__.py  cache_manager.py  rate_limiter.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20251216_1059_initial_schema_agencies_teams_users_.py  20251216_1157_add_google_sso_and_rbac.py  20251216_1222_seed_test_data.py  20251217_add_row_level_security.py
backend/scripts/: seed_cookbooks.py
backend/tests/: conftest.py  generate_test_tokens.py  seed_data.py
backend/tests/test_agents/: test_agent_runtime.py  test_cookbook_loader.py  test_recipe_evaluator.py
backend/tests/test_api/: test_agent_api.py  test_agents_integration.py
backend/tests/test_components/: test_cache_manager.py  test_rate_limiter.py
backend/tests/test_utils/: test_secrets.py
(+171 files in other folders)
